--- a/style/header.css
+++ b/style/header.css
@@ -55,6 +55,11 @@
  background-clip: text;
  text-transform: uppercase;
 }
+
 .container__botao{
     display: none;
+}
+
+@media screen and (min-width: 1024px) {
+    
 }
