--- a/style/banner.css
+++ b/style/banner.css
@@ -3,19 +3,21 @@
     color: var(--branco);
     text-align: center;
     padding: 2.5em 2em;
+
 }
 
-.banner__título {
+.banner__titulo {
     font-size: 18px;
     font-weight: 700;
+
 }
 
-.banner__texto {
+.banner__texto{
     font-weight: 500;
-    margin: 1em 0;
+    margin:1em 0;
 }
 
-.banner_pesquisa {
+.banner__pesquisa {
     background-color: transparent;
     border: 1px solid var(--branco);
     color: var(--branco);
@@ -24,7 +26,7 @@
     width: 100%;
 }
 
-.banner_pesquisa::placeholder {
+.banner__pesquisa::placeholder {
     font-family: var(--fonte-principal);
     font-size: 14px;
     font-weight: 400;
