--- a/style/header.css
+++ b/style/header.css
@@ -37,7 +37,7 @@
 }
 
 .lista__menu,
-.lista__menu-titulo {
+.lista__menu-titulo{
     padding: 1em;
     background-color: var(--branco);
 }
@@ -47,19 +47,55 @@
     font-weight: 700;
 }
 
-
 .lista-menu__link{
- background: var(--azul-degrade);
- -webkit-background-clip: text;
- -webkit-text-fill-color: transparent;
- background-clip: text;
- text-transform: uppercase;
+    background: var(--azul-degrade);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-transform: uppercase;
 }
 
-.container__botao{
+.container__botao {
+    display: none;
+}
+
+.container__titulo{
+    display: none;
+}
+
+.opções {
     display: none;
 }
 
 @media screen and (min-width: 1024px) {
-    
+
+    .container__titulo,
+    .container__titulo--negrito {
+        font-family: var(--fonte-secundario);
+        font-size: 30px;
+    }  
+
+    .container__titulo {
+        font-weight: 400;
+        display: block;
+    }
+
+    .container__titulo--negrito{
+        font-weight: 700;
+    }
+
+    .opções {
+        display: flex;
+    }
+
+    .opções__item {
+        padding: 0 1em;
+        text-transform: uppercase;
+    }
+
+    .opções__link{
+        text-decoration: none;
+        color: var(--preto);
+    }
+
 }
