--- a/style.css
+++ b/style.css
@@ -1,12 +1,16 @@
 @import url("style/header.css");
 @import url("style/banner.css");
 
+
 :root{
     --cor-de-fundo: #EBECEE;
     --branco: #ffffff;
     --laranja: #EB9B00;
+    --preto: #000000;
     --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
     --fonte-principal: "Poppins";
+    --azul: #002F52;
+    --fonte-secundario: "Josefin Sans";
 }
 
 body{
@@ -14,4 +18,5 @@ body{
     font-family: var(--fonte-principal);
     font-size: 16px;
     font-weight: 400;
+
 }
